syntax = "proto3";

package chat;
option go_package = "../butlerpb";

message RoomPort {
  int32 port = 1;
  bool exists = 2;
}

message RoomNameSize {
  string name = 1;
  int32 size = 2;
}

message RoomName {
  string name = 1;
}

service Butler {
  rpc CreateRoom(RoomNameSize) returns (RoomPort) {}
  rpc FindRoom(RoomName) returns (RoomPort) {}
}